--- a/about.html
+++ b/about.html
@@ -4,24 +4,50 @@ title: About phillmv
 ---
 <h1>About</h1>
 <ul style='padding-left: 1em;'>
-	  <li>
-	  chief exporter of awesome
-	  </li>
-	  <li>
-	  expert wrangler of predicaments
-	  </li>
-	  <li>
-	  experienced purveyor of internets
-	  </li>
-	</ul>
- I've written <a href="http://github.com/phillmv">this code</a>, and I've most recently worked on <a href="http://themarknews.com">this website</a>. 
-	  <br/>
-	  <br/>
-	  I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a href="http://delicious.com/hiffy">these links</a>, and I selected <a href="http://believeinanything.com">these images</a>.
-	  <br/>
-	  <br/>
-	  <a name="contact">
-	  You can send me email at phillmv -at- okayfail.com
-	  <br/>
-	  and you should follow me <a href="http://twitter.com/phillmv">on twitter</a>.
+  <li>
+  chief exporter of awesome
+  </li>
+  <li>
+  expert wrangler of predicaments
+  </li>
+  <li>
+  experienced purveyor of internets
+  </li>
+</ul>
+
+I'm a freelance ruby on rails developer living in Toronto, Canada. Occasionally, I volunteer to help run something.
+<br/>
+<br/>
+I've written <a href="http://github.com/phillmv">this code</a>, and I've most recently worked on <a href="http://themarknews.com">this website</a>. 
+<br/>
+<br/>
+I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a href="http://delicious.com/hiffy">these links</a>, and I selected <a href="http://believeinanything.com">these images</a>.
+<br/>
+<a name="contact">
+  <h1>Contact</h1>
+  You can send me email at phillmv -at- okayfail.com
+  <br/>
+  and you should follow me <a href="http://twitter.com/phillmv">on twitter</a>.
+  <br/>
+  <br/>
+<style type="text/css">
+#flickr_badge_source_txt {padding:0; font: 11px Arial, Helvetica, Sans serif; color:#666666;}
+#flickr_badge_icon {display:block !important; margin:0 !important; border: 1px solid rgb(0, 0, 0) !important;}
+#flickr_icon_td {padding:0 5px 0 0 !important;}
+.flickr_badge_image {text-align:center !important;}
+.flickr_badge_image img {border: 1px solid black !important;}
+#flickr_www {display:block; padding:0 10px 0 10px !important; font: 11px Arial, Helvetica, Sans serif !important; color:#3993ff !important;}
+#flickr_badge_uber_wrapper a:hover,
+#flickr_badge_uber_wrapper a:link,
+#flickr_badge_uber_wrapper a:active,
+#flickr_badge_uber_wrapper a:visited {text-decoration:none !important; background:inherit !important;color:#3993ff;}
+#flickr_badge_wrapper {background-color:#ffffff;}
+#flickr_badge_source {padding:0 !important; font: 11px Arial, Helvetica, Sans serif !important; color:#666666 !important;}
+</style>
+<table id="flickr_badge_uber_wrapper" cellpadding="0" cellspacing="10" border="0"><tr><td><a href="http://www.flickr.com" id="flickr_www">www.<strong style="color:#3993ff">flick<span style="color:#ff1c92">r</span></strong>.com</a><table cellpadding="0" cellspacing="10" border="0" id="flickr_badge_wrapper">
+<tr>
+<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=5&display=latest&size=s&layout=h&source=user_set&user=10119816%40N06&set=72157605933581309&context=in%2Fset-72157605933581309%2F"></script>
+</tr>
+</table>
+</td></tr></table>
 
