--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,8 @@ title: Archive
 <h1>Archive</h1>
 <div id="archive">
 {% for post in site.posts %}
-{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a>
+{{ post.date | date_to_string }} <br/><a href="{{ post.url }}">{{ post.title }}</a>
+<br/>
 <br/>
 {% endfor %}
 </div>
