--- a/_posts/2010-05-16-new-yorkers-website-is-terrible.html
+++ b/_posts/2010-05-16-new-yorkers-website-is-terrible.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: New Yorker, I love you, but you're bringing me down.
 ---
 
@@ -16,13 +16,9 @@ title: New Yorker, I love you, but you're bringing me down.
     padding-top: 20px;
     margin-bottom: 20px;
   }
-  .nyr .large {
-    margin-left: -100px;
-  }
 </style>
 
 <div class="nyr">
-  <h1>New Yorker, I love you, but you're bringing me down.</h1>
   <p style="padding-top: 0px;">I was going through my backlog of New Yorker magazines when I came across something really neat that I would like to share with a friend.</p>
   <img src="http://okayfail.com/img/let-me-send-u-it.png" >
   <p>This should not be difficult.</p>
