--- a/about.html
+++ b/about.html
@@ -2,7 +2,6 @@
 layout: default
 title: About phillmv
 ---
-<h1>About</h1>
 <ul style='padding-left: 1em;'>
   <li>
   chief exporter of awesome
@@ -23,8 +22,9 @@ I've written <a href="http://github.com/phillmv">this code</a>, and I've most re
 <br/>
 I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a href="http://delicious.com/hiffy">these links</a>, and I selected <a href="http://believeinanything.com">these images</a>.
 <br/>
-<a name="contact">
-  <h1>Contact</h1>
+<br/>
+<a name="contact"></a>
+  <h2>Contact</h2>
   You can send me email at phillmv -at- okayfail.com
   <br/>
   and you should follow me <a href="http://twitter.com/phillmv">on twitter</a>.
@@ -45,7 +45,7 @@ I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a h
 #flickr_badge_source {padding:0 !important; font: 11px Arial, Helvetica, Sans serif !important; color:#666666 !important;}
 </style>
 <table id="flickr_badge_uber_wrapper" cellpadding="0" cellspacing="10" border="0"><tr><td><a href="http://www.flickr.com" id="flickr_www">www.<strong style="color:#3993ff">flick<span style="color:#ff1c92">r</span></strong>.com</a><table cellpadding="0" cellspacing="10" border="0" id="flickr_badge_wrapper">
-<tr>
+<tr style="border:0">
 <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=5&display=latest&size=s&layout=h&source=user_set&user=10119816%40N06&set=72157605933581309&context=in%2Fset-72157605933581309%2F"></script>
 </tr>
 </table>
