Update the about.

--- a/about.html
+++ b/about.html
@@ -17,10 +17,7 @@ title: About phillmv
 I'm a freelance ruby on rails developer living in Toronto, Canada. Occasionally, I volunteer to help run something.
 <br/>
 <br/>
-I've written <a href="http://github.com/phillmv">this code</a>, and I've most recently worked on <a href="http://themarknews.com">this website</a>. 
-<br/>
-<br/>
-I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a href="http://delicious.com/hiffy">these links</a>, and I selected <a href="http://believeinanything.com">these images</a>.
+I've written <a href="http://github.com/phillmv">this code</a>, I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a href="http://pinboard.in/u:phillmv">these links</a>, and I selected <a href="http://believeinanything.com">these images</a>.
 <br/>
 <br/>
 <a name="contact"></a>
