--- a/archive.html
+++ b/archive.html
@@ -1,13 +1,18 @@
 ---
-layout: default
+layout: about 
 title: Archive
 ---
-{% for post in site.posts %}
-  <p>
-    {{ post.date | date_to_string }}
-    <br/>
-    <a href="{{ post.url }}">{{ post.title }}</a>
-  </p>
-{% endfor %}
+<div class="row-fluid">
+  <div class="span10 offset2">
+    <h2>Archive</h2>
+    {% for post in site.posts %}
+      <p>
+        {{ post.date | date_to_string }}
+        <br/>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </p>
+    {% endfor %}
+  </div>
+</div>
 
 
