--- a/about.html
+++ b/about.html
@@ -5,37 +5,26 @@ title: About
 <!-- Dirty hack but it'll do for now.-->
 
 <div class="row-fluid">
-  <div class="span10 offset2">
-    <h2>Hello there!</h2>
-  </div>
-</div>
-
-<div class="row-fluid">
-  <div class="span10 offset2">
-
-    <div class="img span2">
-      <img src="/img/bio.png" />
-    </div>
-
-    <div class="span5">
+    <div class="span6 offset2">
+    <h2>Oh, hello there.</h2>
       <p>
-      I live in Toronto, Canada. I make things that go on the web. In fact, I run a software development and security consultancy called <a href="http://state.io">State Machinery</a>. 
+        I live in Toronto, Canada.<br/> 
+        I make things that go on the web ("<a href="http://github.com/phillmv">software engineer</a>"), mostly with Ruby on Rails.<br/>
+      </p>
+      <p>
+        I'm available for hire through <a href="http://state.io">State Machinery</a>.
       </p>
       <p>
       You can reach me at phillmv -at- okayfail.com
-      </p>
-    </div>
+    </p>
   </div>
 </div>
 
 
 <div class="row-fluid">
   <div class="span5 offset2">
-    <h2>I'm interested in all sorts of things!</h2>
-    <p>These days, I spend most of my time on software development but I find myself reading a lot of history and the odd economics blog.</p>
-    <p>I'm really passionate about the internet. I think it's a really great medium! and it's been really fun to see it evolve. I have lots of opinions about the web.</p>
     <p>I really enjoy photography. I take a lot of pictures with my cellphone. You should <a href="http://instagram.com/phillmv">check them out</a>.</p>
-    <p>A few times a year I take pictures with a fancier camera. Here are some of my favourites:</p>
+    <p>A few times a year I take pictures with a <a href="www.flickr.com/photos/hiffy/">fancier camera</a>. Here are some of my favourites:</p>
     <a href="http://www.flickr.com/photos/hiffy/6578797575/" title="_MG_3640 by Phill MV, on Flickr"><img src="http://farm8.staticflickr.com/7026/6578797575_936ba3af37.jpg" width="500" height="333" alt="_MG_3640"></a>
     <br/>
     <br/>
