--- a/about.html
+++ b/about.html
@@ -5,16 +5,18 @@ title: About
 <!-- Dirty hack but it'll do for now.-->
 
 <div class="row-fluid">
-    <div class="span6 offset2">
-    <h2>Oh, hello there.</h2>
-      <p>
-        I live in Toronto, Canada.<br/> 
-        I make things that go on the web ("<a href="http://github.com/phillmv">software engineer</a>"), mostly with Ruby on Rails.<br/>
-      </p>
-      <p>
-        I'm available for hire through <a href="http://state.io">State Machinery</a>.
-      </p>
-      <p>
+  <div class="span6 offset3">
+    <br/>
+    <p>Hey. My name is Phillip Mendonça-Vieira.</p>
+    <p>
+      I live in Toronto, Canada.<br/> 
+      I make things that go on the web ("<a href="http://github.com/phillmv">software engineer</a>"), mostly with Ruby on Rails.<br/>
+    </p>
+    <p>I've been putting things on the internet for over ten years. I have a degree in Computer Science from Ryerson University.</p>
+    <p>
+      I'm available for hire through <a href="http://state.io">State Machinery</a>.
+    </p>
+    <p>
       You can reach me at phillmv -at- okayfail.com
     </p>
   </div>
@@ -22,7 +24,7 @@ title: About
 
 
 <div class="row-fluid">
-  <div class="span5 offset2">
+  <div class="span5 offset3">
     <p>I really enjoy photography. I take a lot of pictures with my cellphone. You should <a href="http://instagram.com/phillmv">check them out</a>.</p>
     <p>A few times a year I take pictures with a <a href="www.flickr.com/photos/hiffy/">fancier camera</a>. Here are some of my favourites:</p>
     <a href="http://www.flickr.com/photos/hiffy/6578797575/" title="_MG_3640 by Phill MV, on Flickr"><img src="http://farm8.staticflickr.com/7026/6578797575_936ba3af37.jpg" width="500" height="333" alt="_MG_3640"></a>
@@ -35,45 +37,45 @@ title: About
   </div>
 </div>
 
-  <!--<ul>-->
-    <!--<li>-->
+<!--<ul>-->
+  <!--<li>-->
     <!--chief exporter of awesome-->
     <!--</li>-->
-    <!--<li>-->
+  <!--<li>-->
     <!--expert wrangler of predicaments-->
     <!--</li>-->
-    <!--<li>-->
+  <!--<li>-->
     <!--experienced purveyor of internets-->
     <!--</li>-->
-    <!--</ul>-->
+  <!--</ul>-->
 
-  <!--<p>I'm a freelance ruby on rails developer living in Toronto, Canada.</p>-->
-  <!--<p>I've written <a href="http://github.com/phillmv">this code</a>, I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a href="http://pinboard.in/u:phillmv">these links</a>, and I selected <a href="http://believeinanything.com">these images</a>.</p>-->
-  <!--<a name="contact"></a>-->
-  <!--<h2>Contact</h2>-->
-  <!--You can send me email at phillmv -at- okayfail.com-->
-  <!--<br/>-->
-  <!--and you should follow me <a href="http://twitter.com/phillmv">on twitter</a>.-->
-  <!--<br/>-->
-  <!--<br/>-->
-  <!--<style type="text/css">-->
-    <!--#flickr_badge_source_txt {padding:0; font: 11px Arial, Helvetica, Sans serif; color:#666666;}-->
-    <!--#flickr_badge_icon {display:block !important; margin:0 !important; border: 1px solid rgb(0, 0, 0) !important;}-->
-    <!--#flickr_icon_td {padding:0 5px 0 0 !important;}-->
-    <!--.flickr_badge_image {text-align:center !important;}-->
-    <!--.flickr_badge_image img {border: 1px solid black !important;}-->
-    <!--#flickr_www {display:block; padding:0 10px 0 10px !important; font: 11px Arial, Helvetica, Sans serif !important; color:#3993ff !important;}-->
-    <!--#flickr_badge_uber_wrapper a:hover,-->
-    <!--#flickr_badge_uber_wrapper a:link,-->
-    <!--#flickr_badge_uber_wrapper a:active,-->
-    <!--#flickr_badge_uber_wrapper a:visited {text-decoration:none !important; background:inherit !important;color:#3993ff;}-->
-    <!--#flickr_badge_wrapper {background-color:#ffffff;}-->
-    <!--#flickr_badge_source {padding:0 !important; font: 11px Arial, Helvetica, Sans serif !important; color:#666666 !important;}-->
-    <!--</style>-->
-  <!--<table id="flickr_badge_uber_wrapper" cellpadding="0" cellspacing="10" border="0"><tr><td><a href="http://www.flickr.com" id="flickr_www">www.<strong style="color:#3993ff">flick<span style="color:#ff1c92">r</span></strong>.com</a><table cellpadding="0" cellspacing="10" border="0" id="flickr_badge_wrapper">-->
-          <!--<tr style="border:0">-->
-            <!--<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=5&display=latest&size=s&layout=h&source=user_set&user=10119816%40N06&set=72157605933581309&context=in%2Fset-72157605933581309%2F"></script>-->
-            <!--</tr>-->
-          <!--</table>-->
-        <!--</td></tr></table>-->
-  <!--</div>-->
+<!--<p>I'm a freelance ruby on rails developer living in Toronto, Canada.</p>-->
+<!--<p>I've written <a href="http://github.com/phillmv">this code</a>, I took <a href="http://flickr.com/photos/hiffy">these pictures</a>, I saved <a href="http://pinboard.in/u:phillmv">these links</a>, and I selected <a href="http://believeinanything.com">these images</a>.</p>-->
+<!--<a name="contact"></a>-->
+<!--<h2>Contact</h2>-->
+<!--You can send me email at phillmv -at- okayfail.com-->
+<!--<br/>-->
+<!--and you should follow me <a href="http://twitter.com/phillmv">on twitter</a>.-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<style type="text/css">-->
+  <!--#flickr_badge_source_txt {padding:0; font: 11px Arial, Helvetica, Sans serif; color:#666666;}-->
+  <!--#flickr_badge_icon {display:block !important; margin:0 !important; border: 1px solid rgb(0, 0, 0) !important;}-->
+  <!--#flickr_icon_td {padding:0 5px 0 0 !important;}-->
+  <!--.flickr_badge_image {text-align:center !important;}-->
+  <!--.flickr_badge_image img {border: 1px solid black !important;}-->
+  <!--#flickr_www {display:block; padding:0 10px 0 10px !important; font: 11px Arial, Helvetica, Sans serif !important; color:#3993ff !important;}-->
+  <!--#flickr_badge_uber_wrapper a:hover,-->
+  <!--#flickr_badge_uber_wrapper a:link,-->
+  <!--#flickr_badge_uber_wrapper a:active,-->
+  <!--#flickr_badge_uber_wrapper a:visited {text-decoration:none !important; background:inherit !important;color:#3993ff;}-->
+  <!--#flickr_badge_wrapper {background-color:#ffffff;}-->
+  <!--#flickr_badge_source {padding:0 !important; font: 11px Arial, Helvetica, Sans serif !important; color:#666666 !important;}-->
+  <!--</style>-->
+<!--<table id="flickr_badge_uber_wrapper" cellpadding="0" cellspacing="10" border="0"><tr><td><a href="http://www.flickr.com" id="flickr_www">www.<strong style="color:#3993ff">flick<span style="color:#ff1c92">r</span></strong>.com</a><table cellpadding="0" cellspacing="10" border="0" id="flickr_badge_wrapper">-->
+        <!--<tr style="border:0">-->
+          <!--<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=5&display=latest&size=s&layout=h&source=user_set&user=10119816%40N06&set=72157605933581309&context=in%2Fset-72157605933581309%2F"></script>-->
+          <!--</tr>-->
+        <!--</table>-->
+      <!--</td></tr></table>-->
+<!--</div>-->
